[package]
name = "transformable"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/al8n/transformable"
homepage = "https://github.com/al8n/transformable"
documentation = "https://docs.rs/transformable"
description = "Transform its representation between structured and byte form."
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
keywords = ["wire", "bytes", "binary"]
categories = ["development-tools", "no-std"]

[features]
default = ["std"]
alloc = []
std = ["alloc", "byteorder/default"]
async = ["futures-util", "std"]


[dependencies]
byteorder = { version = "1", default-features = false }
dbutils = { version = "0.12", default-features = false }
futures-util = { version = "0.3", optional = true, features = ["io"] }
paste = "1"
thiserror = "2"

bytes1 = { package = "bytes", version = "1", optional = true }
smol_str03 = { package = "smol_str", version = "0.3", optional = true }
smol_str02 = { package = "smol_str", version = "0.2", optional = true }
smallvec1 = { package = "smallvec", version = "1", default-features = false, optional = true, features = ["const_generics", "const_new", "union"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = { version = "0.8" }

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
